Refactor unit and agenda checks to service classes
Moved isPlayerElected and getTilesOfPlayersSpecificUnits logic from ButtonHelper to new service classes (IsPlayerElectedService, CheckUnitContainmentService). Updated all usages across helpers and resolvers to use the new service methods. Renamed ColonialButtonHelper to ColonialButtonHandler for consistency. Cleaned up imports and improved code organization.